--- a/src/Makefile
+++ b/src/Makefile
@@ -495,7 +495,19 @@ ifeq ($(COMP),ndk)
 			STRIP=llvm-strip
 		endif
 	endif
-	LDFLAGS += -static-libstdc++ -pie -lm -latomic
+	ifeq ($(ARCH), $(filter $(ARCH), \
+									 x86-64-vnni512 x86-64-vnni256 x86-64-avx512 x86-64-avxvnni x86-64-bmi2 \
+									 x86-64-avx2 x86-64-sse41-popcnt x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt \
+									 x86-64))
+		CXX=x86_64-linux-android33-clang++
+		STRIP=llvm-strip
+	endif
+ifeq ($(ARCH), $(filter $(ARCH), \
+                 x86-32-sse41-popcnt x86-32-sse2 x86-32))
+ 		CXX=i686-linux-android33-clang++
+		STRIP=llvm-strip
+	endif
+ 	LDFLAGS += -static-libstdc++ -pie -lm -latomic
 endif
 
 ifeq ($(comp),icx)
